--- a/contracts/brownie-config.yaml
+++ b/contracts/brownie-config.yaml
@@ -1,7 +1,9 @@
 dependencies:
+  - OpenZeppelin/openzeppelin-contracts@4.4.0
 compiler:
   solc:
     remappings:
+      - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.4.0'
 networks:
   rinkeby:
     verify: True
