--- a/contracts/brownie-config.yaml
+++ b/contracts/brownie-config.yaml
@@ -6,9 +6,11 @@ compiler:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.4.0'
 networks:
   rinkeby:
+    WETH_ADDRESS: "0xc778417E063141139Fce010982780140Aa0cD5Ab"
     verify: True
   kovan:
     verify: True
+    WETH_ADDRESS: "0xd0A1E359811322d97991E03f863a0C30C2cF029C"
 wallets:
   from_key: ${PRIVATE_KEY}
 dotenv: .env
