--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -6,11 +6,45 @@ compiler:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.4.0'
 networks:
   rinkeby:
-    WETH_ADDRESS: "0xc778417E063141139Fce010982780140Aa0cD5Ab"
-    verify: True
+    frTokenName: "frETH"
+    frTokenSymbol: "frETH"
+    FRZ_SYMBOL: "FRZ"
+    WASSET_ADDRESS: "0xc778417E063141139Fce010982780140Aa0cD5Ab"
+    publish: True
   kovan:
-    verify: True
-    WETH_ADDRESS: "0xd0A1E359811322d97991E03f863a0C30C2cF029C"
+    publish: True
+    WASSET_ADDRESS: "0xd0A1E359811322d97991E03f863a0C30C2cF029C"
+  polygon_testnet:
+    publish: True
+    WASSET_ADDRESS: "0x9c3C9283D3e44854697Cd22D3Faa240Cfb032889"
+    frTokenName: "frMATIC"
+    frTokenSymbol: "frMATIC"
+    FRZ_SYMBOL: "FRZ-m"
+  arbitrum-rinkeby:
+    publish: True
+    WASSET_ADDRESS: "0xB47e6A5f8b33b3F17603C83a0535A9dcD7E32681"
+    frTokenName: "frETH"
+    frTokenSymbol: "frETH"
+    FRZ_SYMBOL: "FRZ"
+  ftm-test:
+    publish: True
+    WASSET_ADDRESS: "0x07B9c47452C41e8E00f98aC4c075F5c443281d2A"
+    frTokenName: "frFTM"
+    frTokenSymbol: "frFTM"
+    FRZ_SYMBOL: "FRZ-f"
+  bsc-test:
+    publish: True
+    WASSET_ADDRESS: "0xae13d989dac2f0debff460ac112a837c89baa7cd"
+    frTokenName: "frBNB"
+    frTokenSymbol: "frBNB"
+    FRZ_SYMBOL: "FRZ-b"
+  avax_testnet:
+    publish: True
+    WASSET_ADDRESS: "0xd00ae08403B9bbb9124bB305C09058E32C39A48c"
+    frTokenName: "frAVAX"
+    frTokenSymbol: "frAVAX"
+    FRZ_SYMBOL: "FRZ-a"
+
 wallets:
   from_key: ${PRIVATE_KEY}
 dotenv: .env
