--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -5,6 +5,12 @@ compiler:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.4.0'
 networks:
+  mainnet:
+    frTokenName: "frETH"
+    frTokenSymbol: "frETH"
+    FRZ_SYMBOL: "FRZ"
+    WASSET_ADDRESS: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2"
+    publish: True
   rinkeby:
     frTokenName: "frETH"
     frTokenSymbol: "frETH"
@@ -44,6 +50,11 @@ networks:
     frTokenName: "frAVAX"
     frTokenSymbol: "frAVAX"
     FRZ_SYMBOL: "FRZ-a"
+  polygon-alchemy:
+    publish: True
+    WASSET_ADDRESS: "0x0d500B1d8E8eF31E21C99d1Db9A6444d3ADf1270"
+    frTokenName: "frMATIC"
+    FRZ_SYMBOL: "FRZ-m"
 
 wallets:
   from_key: ${PRIVATE_KEY}
